2013-03-15  Niibe Yutaka  <gniibe@fsij.org>

	New USB stack.

	* src/main.c (device_desc, config_desc, string_descs): Remove.
	(neug_device_reset, neug_ctrl_write_finish, neug_setup)
	(neug_get_descriptor, neug_usb_event, usb_cb_interface): Rename to
	usb_cb_*.
	(Device_Method): Remove.
	(main): Use vcom_configuration_desc.

	* src/usb_lld.h, src/usb_stm32f103.c: Updated from Gnuk.

2013-02-18  Niibe Yutaka  <gniibe@fsij.org>

	* boards/STM32_PRIMER2/board.c, boards/STM32_PRIMER2/board.h:
	Update for ChibiOS/RT 2.4.x.

	* boards/FST_01/board.h: Use AN0 and AN9.

	* src/random.c (noise_source_cnt_max_reset, noise_source_error):
	Remove LED I/O.

	* src/adc_stm32f103.c (ADC_SMPR2_SMP_AN9, ADC_CHANNEL_IN9): New.

	* src/neug.h (neug_prng_reseed): Remove.

	* chibios: Update.

2013-02-07  Niibe Yutaka  <gniibe@fsij.org>

	* Version 0.05.

	* src/main.c (vcom_string3): Updated.

2013-01-25  Niibe Yutaka  <gniibe@fsij.org>

	* src/sha256.c (memcpy_bswap32): New function.
	(bswap32_buf): Removed.
	(sha256_finish): Use memcpy_bswap32.

2013-01-24  Niibe Yutaka  <gniibe@fsij.org>

	* src/sha256.c (v_cycle0): New.  Special case of v_cycle(i,j)
	where j == 0.  Do byte order swapping here.
	(v_cycle): Assume j != 0.
	(sha256_process): Use v_cycle0 and v_cycle.
	(sha256_update): Don't do byte order swapping.
	(sha256_finish): Follow the change of sha256_process does byte
	order swapping.

2012-12-17  Niibe Yutaka  <gniibe@fsij.org>

	* boards/FST_01_00: Added.

2012-10-30  Niibe Yutaka  <gniibe@fsij.org>

	* Version 0.04.

	* src/main.c (vcom_string3): Updated.

2012-10-26  Niibe Yutaka  <gniibe@fsij.org>

	* NEUG_USB_DEVICE_ID (Product_STRING): Rename to NeuG True RNG.

2012-10-23  Niibe Yutaka  <gniibe@fsij.org>

	* src/random.c (neug_consume_random): New.

	* src/main.c (copy_to_tx): New.
	(main): Call neug_consume_random.

2012-10-17  Niibe Yutaka  <gniibe@fsij.org>

	* src/main.c (main): Wait for random number generation (instead of
	sleeping).
