@@ -1,5 +1,11 @@
 2013-03-15  Niibe Yutaka  <gniibe@fsij.org>
 
+	Support relocatable reGNUal.
+
+	* src/neug.ld.in (_regnual_start): Now, it's just '.'.
+	* src/main.c (calculate_regnual_entry_address): New.
+	(main): Use calculate_regnual_entry_address for entry point.
+
 	New USB stack.
 
 	* src/main.c (device_desc, config_desc, string_descs): Remove.
